# MiLostProject

./: .gitignore  .htaccess  .npmignore  Cargo.toml  README.md  chechwasm.js  findwasm.sh  index.mjs  milost-1.0.2.tgz  milost-1.0.33.tgz  package-lock.json  package.json  project_snapshot_1.txt  project_snapshot_2.txt  roadmap.md  serve.json  snapshot.js  test-wasm.html  test_local.sh  tsconfig.json  tsconfig.json.original  web.config
core_files_for_claude/: base_props.rs  component.rs  event_handler.rs  gesture_recognition.rs  layout_utils.rs  properties.rs  registry.rs  styles.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/language/: Cargo.toml
crates/server/: Cargo.toml
crates/ui/: Cargo.toml  refactoring_plan.md  roadmap.md  snapshot.sh
crates/ui/src/: button.rs  color.rs  component.rs  divider.rs  events.rs  font.rs  image.rs  lib.readme.md  lib.rs  scroll.rs  spacer.rs  stack.rs  text.rs  zstack.rs
crates/ui/src/components/: base_props.rs  button.rs  component.rs  divider.rs  image.rs  mod.rs  registry.rs  scroll.rs  spacer.rs  stack.rs  text.rs  zstack.rs
crates/ui/src/events/: EVENTS_README.md  event_handler.readme.md  event_middleware.readme.md  event_middleware.rs  event_system.readme.md  event_system.rs  event_types.readme.md  event_types.rs  gesture_recognition.readme.md  mod.rs  registration.rs
crates/ui/src/factories/: image_factory.rs  layout_factory.rs  mod.rs  scroll_factory.rs  text_factory.rs  zstack_factory.rs
crates/ui/src/hooks/: image_hooks.rs  mod.rs  scroll_hooks.rs  stack_hooks.rs  text_hooks.rs  zstack_hooks.rs
crates/ui/src/layout/: button_layout.rs  divider_layout.rs  engine.rs  flex_layout.rs  image_layout.rs  layout_engine.readme.md  layout_engine.rs  layout_info.readme.md  layout_info.rs  layout_utils.readme.md  layout_utils.rs  mod.rs  scroll_layout.rs  spacer_layout.rs  stack_layout.rs  text_layout.rs  types.readme.md  types.rs  zstack_layout.rs
crates/ui/src/platform/: mod.rs
crates/ui/src/platform/canvas/: mod.rs  renderer.rs
crates/ui/src/platform/native/: mod.rs
crates/ui/src/render/: component.readme.md  component.rs  mod.rs  node.readme.md  node.rs  property.rs  renderer.readme.md  renderer.rs
crates/ui/src/render/components/: base_renderer.rs  button_renderer.rs  canvas_renderer.rs  divider_renderer.rs  hstack_renderer.rs  image_renderer.rs  mod.rs  scroll_renderer.rs  shared.rs  spacer_renderer.rs  text_renderer.rs  vstack_renderer.rs  zstack_renderer.rs
crates/ui/src/render/transformers/: button_transformer.rs  divider_transformer.rs  hstack_transformer.rs  image_transformer.rs  mod.rs  scroll_transformer.rs  spacer_transformer.rs  text_transformer.rs  utils.readme.md  utils.rs  vstack_transformer.rs  zstack_transformer.rs
crates/ui/src/shared/: color.readme.md  edge_insets.rs  font.readme.md  font.rs  mod.rs  properties.rs
crates/ui/src/themes/: mod.rs  text_theme.rs
crates/wasm/: Cargo.toml  build.sh  milost_wasm.sh
crates/wasm/lang/: Cargo.toml
crates/wasm/lang/src/: common.rs  ownership.rs  primitives.rs  sync_primitives.rs
crates/wasm/src/: channel.rs  common.rs  computed.rs  contract.rs  disposable.rs  error.rs  functional.rs  hash_map.rs  invariant.rs  iter.rs  lib.rs  match_builder.rs  option.rs  refmut.rs  resource.rs  result.rs  smart_pointers.rs  str.rs  struct.rs  tuple.rs  vec.rs
crates/wasm/src/algorithms/: graph.rs  mod.rs  search.rs  sorting.rs
crates/wasm/src/compression/: compression.rs  mod.rs
crates/wasm/src/crypto/: crypto.rs
crates/wasm/src/image/: image_processing.rs  mod.rs
crates/wasm/src/lang/: branding.rs  channel.rs  common.rs  disposable.rs  error.rs  functional.rs  hash_map.rs  hash_set.rs  iter.rs  matching.rs  mod.rs  option.rs  primitives.rs  ref.rs  resource.rs  str.rs  struct.rs  task.rs  tuple.rs  vec.rs
crates/wasm/src/machine_learning/: machine_learning.rs
crates/wasm/src/math/: math_lib.rs  mod.rs
crates/wasm/src/regex_builder/: expressions.rs  language.rs  mod.rs  operators.rs  readme.md  regex_builder.rs
crates/wasm/src/text/: mod.rs  text_processing.rs
crates/wasm/src/ui/: button.rs  canvas_context.rs  color.rs  divider.rs  font.rs  hstack.rs  image.rs  mod.rs  parser.rs  renderer.rs  roadmap.md  scroll.rs  spacer.rs  stack.rs  stack_utils.rs  text.rs  ui_ast.rs  vstack.rs  zstack.rs
crates/wasm/src/utils/: mod.rs
crates/wasm/src/utils/algorithms/: sorting.rs
crates/wasm/src/utils/compression/: huffman_node.rs
crates/wasm/src/utils/crypto/: crypto.rs  mod.rs
crates/wasm/src/utils/image/: image_processing.rs  mod.rs
crates/wasm/src/utils/math/: mod.rs
crates/wasm/src/utils/regex_builder/: mod.rs  parser.rs  patterns.rs
example/: index.html  package-lock.json  package.json  tsconfig.json
example/src/: app.ts
lib/: index.ts  package.json
lib/async/: index.ts
lib/atom/: atom.ts  atomContext.ts  index.ts
lib/borrow/: index.ts  ownership.ts  ref.ts  refmut.ts
lib/concurrency/: channel.ts  index.ts  task.ts
lib/contract/: contract.ts  index.ts  invariant.ts
lib/core/: error.ts  functional.ts  iter.ts  option.ts  result.ts
lib/memory/: computed.ts  smart_pointers.ts  sync_primitives.ts
lib/patterns/: match_builder.ts  matching.ts
lib/resource/: disposable.ts  resource.ts
lib/types/: branding.ts  common.ts  hash_map.ts  hash_set.ts  primitives.ts  string.ts  tuple.ts  vec.ts
lib/wasm/: init.ts
milost_showcase/: package-lock.json  package.json  tsconfig.json
milost_showcase/client/: index.html  package-lock.json  package.json  vite.config.ts
milost_showcase/public/: index.html
milost_showcase/src/: app.ts  index.ts  tsconfig.json
scripts/: add-js-extensions.js  build-all.js  build-standalone.sh  build.js  check-dirs.js  check-esm-imports.ts  create-project.js  create-project.ts  fix-module-paths.js  fix-typescript.js  move-to-dist.cjs  reorganize.js  setup.js
src/: global.d.ts  index.ts  jest.config.js  package-lock.json  package.json  tsconfig.json  wasm.d.ts
src/__tests__/: global.d.ts  setup.ts
wasm/: milost.js  milost.wasm
(+357 files in other folders)
