[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/language",
    "crates/wasm"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MiLost programming language and toolchain"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
tera = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
napi = { version = "2.12", default-features = false, features = ["napi4"] }
napi-derive = "2.12"