[workspace]
members = [
    "crates/wasm",
    "crates/ui",
    "crates/wasm/lang",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Milan Vasiljev"]
description = "MiLost programming language and toolchain"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
tera = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"