[package]
name = "milost-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
milost-core = { path = "../core" }
anyhow.workspace = true
clap.workspace = true
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
which = "4.4"
tempfile = "3.3"

# Remove the NAPI dependencies for direct cargo build
# We'll handle NAPI separately with napi-rs

[[bin]]
name = "milost"
path = "src/main.rs"