[package]
name = "milost-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
milost-core = { path = "../core" }
anyhow.workspace = true
clap.workspace = true
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
which = "7.0.2"
tempfile = "3.3"
log = "0.4"
env_logger = "0.11.7"
simple_logger = "5.0.0"

[[bin]]
name = "milost"
path = "src/main.rs"