[package]
name = "milost-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25.6", features = ["png", "jpeg", "gif", "bmp", "ico", "hdr", "pnm", "tga"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
] }
js-sys = "0.3"