[package]
name = "milost-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25.6", features = ["png", "jpeg", "gif", "bmp", "ico", "hdr", "pnm", "tga"] }
# uuid = { version = "1.16.0", features = ["v4", "serde"] }
