[package]
name = "milost-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
milost-core = { path = "../core" }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
console_error_panic_hook = []