[package]
name = "milost-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
milost-core = { path = "../core" }
milost-ui = { path = "../ui" }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "HtmlImageElement",
  "Event"
]}

[features]
console_error_panic_hook = []