[package]
name = "milost-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
milost-core = { path = "../core" }
milost-ui = { path = "../ui" }
regex = "1.9"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Crypto",
  "Document",
  "Element",
  "HtmlElement",
  "CssStyleDeclaration",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "CanvasGradient",
  "HtmlImageElement",
  "TextMetrics",
  "Event",
]}
# Add these for WebAssembly random number generation
rand = { version = "0.8.5", features = ["std", "getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

# Cryptography dependencies
sha2 = "0.10.6"
hmac = "0.12.1"
aes-gcm = "0.10.2"

# Math dependencies 
num-complex = "0.4.3"

[features]
console_error_panic_hook = []

[profile.release]
opt-level = 3
lto = true