[package]
name = "milost-lang"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.9"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "HtmlImageElement",
  "Event",
]}

# Cryptography dependencies
sha2 = "0.10.6"
hmac = "0.12.1"
aes-gcm = "0.10.2"# Math dependencies 
num-complex = "0.4.3"

[features]
console_error_panic_hook = []

[profile.release]
opt-level = 3
lto = true